HelloUltraviolet/Fixtures/RejectedSource/Comptime/InvalidQuotedContent/Expected.uv
//! Expected diagnostic metadata for the InvalidQuotedContent rejected-source specimen.

expectedDiagnostic("E-CTE-0220", "requirement.22.QuotedContentValidity")
